--- a/css/style.css
+++ b/css/style.css
@@ -302,4 +302,10 @@ footer {
 		text-decoration: underline;
 	}
 
+* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
 /* code examples copyright Jonathan Grover 2012 */
+
