--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script); /* font-family: 'Clicker Script', cursive; */
 
 /* scale all images, and media to accomodate responsive layout. */
-img, video, audio, iframe, table, form { 
+img, video, audio, iframe, table, form {
 	width:100%; /* IE */
 	max-width: 100%; /* FF, Safari, Chrome */
 }
@@ -264,6 +264,8 @@ iframe {
 		text-decoration: underline;
 	}
 
+#shadow
+
 /********** Details **********/
 
 #details {
@@ -308,4 +310,3 @@ footer {
 	box-sizing: border-box;
 }
 /* code examples copyright Jonathan Grover 2012 */
-
