--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,13 @@ iframe {
 		text-decoration: underline;
 	}
 
-#shadow {
+#col-8 {
+	float: left;
+	background: white;
+	width: 66.666%
+}
+
+#col-4 {
 	float: left;
 	background: white;
 	width: 33.333%
