--- a/css/layout.css
+++ b/css/layout.css
@@ -1,8 +1,8 @@
 /********** Fixes **********/
 
 * {
-  margin:0;
-  padding:0;
+  margin:10px;
+  padding:5px;
   border:0;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
